--- a/style.css
+++ b/style.css
@@ -1,122 +1,136 @@
 body{
- background-color: blanchedalmond;
+    background-color: rgb(255, 240, 211);
+    overflow-x: hidden;
+
+}
+.FirstDiv{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+.img1{
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
-div.container {
-  width : 920px;
-  margin: 0px auto;
+.yello{ 
+    z-index: -1;
+    position: relative;
+    background-color: yellow;
+    min-height: 50px;
+    max-width: 100px;
+    animation: dance 30s infinite;
+    overflow-x: hidden;
+}
+
+.yello2{ 
+    z-index: -1;
+    position: relative;
+    background-color: yellow;
+    min-height: 50px;
+    max-width: 100px;
+    animation: dance2 30s infinite;
+    overflow-x: hidden;
+}
+
+.curri{
+    max-width: 100%;
+}
+
+.yello3{ 
+    z-index: -1;
+    position: relative;
+    background-color: yellow;
+    min-height: 50px;
+    max-width: 150px;
+    animation: dance3 30s infinite;
+    overflow-x: hidden;
+}
+.yello4{ 
+    z-index: -1;
+    position: relative;
+    background-color: yellow;
+    min-height: 50px;
+    max-width: 300px;
+    animation: dance4 20s infinite;
+    overflow-x: hidden;
+    
+}
+.yello5{ 
+    z-index: -1;
+    position: relative;
+    background-color: yellow;
+    min-height: 50px;
+    max-width: 140px;
+    animation: dance4 15s infinite;
+    overflow-x: hidden;
+}
+.centertext{
+    text-align: center;
   
-  }
-.navbar-brand {
-  display: inline-block;
-  padding-top: .3125rem;
-  padding-bottom: .3125rem;
-  margin-right: 2em;
-  font-size: 1.25rem;
-  line-height: inherit;
-  white-space: nowrap;
+}
+.space{
+
+    min-height: 200px;
+    text-align: center;
+    overflow-x: hidden;
+}
+.maps{
+    border-style: groove;
+    overflow-x: hidden;
 }
 
-.textbox1{
-margin-left: 3rem;
+
+@keyframes dance {
+    0%   {background-color:yellow; left:0px; bottom:100px;}
+    10    {background-color:rgb(255, 255, 0); left:70px; bottom:50px;}
+    20%   {background-color:rgba(255, 255, 0, 0.788); left:50px; bottom:125px;}
+    30%   {background-color:rgba(255, 255, 0, 0.964); left:0px; bottom:50px;}
+    40%   {background-color:rgba(255, 255, 0, 0.747); left:75px; bottom:120px;}
+    50%   {background-color:rgba(255, 255, 0, 0.964); left:180px; bottom:10px;}
+    60%   {background-color:rgba(255, 255, 0, 0.864); left:50px; bottom:80px;}
+    70%   {background-color:rgba(255, 255, 0, 0.964); left:20px; bottom:125px;}
+    80%   {background-color:rgba(255, 255, 0, 0.964); left:330px; bottom:50px;}
+    90%   {background-color:rgba(255, 255, 0, 0.764); left:100px; bottom:0px;}
+    100%   {background-color:rgba(255, 255, 0, 1.00); left:0px; bottom:100px;}
 }
-h1{
-  font-size: 5rem;
-  color: honeydew;
-}
-.box1 {
-  position: relative;
-  top: -5.7rem;
-  left: -1rem;
-  z-index: -1;
-  
-  background-color: gold;
-  width: 65%;
- height: 200px;
-}
-h2{
-  position: relative;
-  right: -3rem;
-  font-size: 3rem;
-  color: honeydew;
+    @keyframes dance2 {
+        0%   {background-color:yellow; right:0px; bottom:100px;}
+        10    {background-color:rgb(255, 255, 0); right:70px; bottom:50px;}
+        20%   {background-color:rgba(255, 255, 0, 0.788); right:50px; bottom:125px;}
+        30%   {background-color:rgba(255, 255, 0, 0.964); right:0px; bottom:50px;}
+        40%   {background-color:rgba(255, 255, 0, 0.747); right:275px; bottom:120px;}
+        50%   {background-color:rgba(255, 255, 0, 0.964); right:180px; bottom:10px;}
+        60%   {background-color:rgba(255, 255, 0, 0.864); right:50px; bottom:80px;}
+        70%   {background-color:rgba(255, 255, 0, 0.964); right:240px; bottom:125px;}
+        80%   {background-color:rgba(255, 255, 0, 0.964); right:330px; bottom:50px;}
+        90%   {background-color:rgba(255, 255, 0, 0.764); right:10px; bottom:0px;}
+        100%   {background-color:rgba(255, 255, 0, 1.00); right:0px; bottom:100px;}
 }
 
-.box2{
-  position: relative;
-  top: -3rem;
-  left: 40rem;
-  z-index: -1;
-  
-  background-color: gold;
-  width: 65%;
- height: 200px;
-
+@keyframes dance3 {
+    0%   {background-color:yellow; left:10px; top:100px;}
+    10    {background-color:rgb(255, 255, 0); left:170px; top:50px;}
+    20%   {background-color:rgba(255, 255, 0, 0.788); left:150px; top:125px;}
+    30%   {background-color:rgba(255, 255, 0, 0.964); left:110px; top:50px;}
+    40%   {background-color:rgba(255, 255, 0, 0.747); left:135px; top:120px;}
+    50%   {background-color:rgba(255, 255, 0, 0.964); left:1180px; top:10px;}
+    60%   {background-color:rgba(255, 255, 0, 0.864); left:150px; top:80px;}
+    70%   {background-color:rgba(255, 255, 0, 0.964); left:1220px; top:125px;}
+    80%   {background-color:rgba(255, 255, 0, 0.964); left:1330px; top:50px;}
+    90%   {background-color:rgba(255, 255, 0, 0.764); left:1100px; top:0px;}
+    100%   {background-color:rgba(255, 255, 0, 1.00); left:10px; top:100px;}
 }
 
-.textbox2{
-  position: relative;
-  top: -10.2rem;
-  left: 10rem;
-  width: 50rem;
-  height: 15rem;
-}
-.leftgo{
-  position: relative;
-  left: -30rem;
-}
-
-@media screen and (max-width:599px) {
-  div.container {
-    width : 400px;
-   
-    margin: 0px auto;
-    
-    }
-  body{
-    block-size: %
-  }
-  .textbox1{
-    margin-left: 2rem;
-    }
-    h1{
-      font-size: 3rem;
-      color: honeydew;
-    }
-    .box1 {
-      position: relative;
-      top: -6.7rem;
-      left: -1rem;
-      z-index: -1;
-      
-      background-color: gold;
-      width: 80%;
-     height: 200px;
-    }
-    h2{
-      position: relative;
-      right: 42rem;
-      font-size: 2rem;
-      color: honeydew;
-    }
-    
-    .box2{
-      position: relative;
-      top: 2rem;
-      left: 4rem;
-      z-index: -1;
-      
-      background-color: gold;
-      width: 80%;
-     height: 150px;
-    
-    }
-    
-    .textbox2{
-      position: relative;
-      top: -10rem;
-      left: 45rem;
-      width: 20rem;
-      height: 7rem;
-    }
-   
+@keyframes dance4 {
+    0%   {background-color:yellow; left:300px; bottom:100px;}
+    10    {background-color:rgb(255, 255, 0); left:380px; bottom:50px;}
+    20%   {background-color:rgba(255, 255, 0, 0.788); left:350px; bottom:125px;}
+    30%   {background-color:rgba(255, 255, 0, 0.964); left:310px; bottom:50px;}
+    40%   {background-color:rgba(255, 255, 0, 0.747); left:375px; bottom:120px;}
+    50%   {background-color:rgba(255, 255, 0, 0.964); left:390px; bottom:10px;}
+    60%   {background-color:rgba(255, 255, 0, 0.864); left:350px; bottom:80px;}
+    70%   {background-color:rgba(255, 255, 0, 0.964); left:220px; bottom:125px;}
+    80%   {background-color:rgba(255, 255, 0, 0.964); left:330px; bottom:50px;}
+    90%   {background-color:rgba(255, 255, 0, 0.764); left:200px; bottom:0px;}
+    100%   {background-color:rgba(255, 255, 0, 1.00); left:300px; bottom:100px;}
 }
